# proxy-rotator

./: .env.example  .gitignore  Dockerfile.retriever  Dockerfile.tester  Makefile  README.md  alembic.ini  docker-compose.yml  example.py  proxy_fetcher.py  proxy_retriever_app.py  proxy_rotator.py  proxy_tester_app.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
db/: models.py  proxy_db.py
docker/retriever/: Dockerfile
docker/tester/: Dockerfile
migrations/: env.py
migrations/versions/: 256617ed0e96_create_proxy_tables.py
scripts/: sync_dependencies.py
services/: http_client.py  proxy_cache.py  proxy_retriever.py  proxy_tester.py  proxy_validator.py
settings/: __init__.py  proxy_settings.py
src/proxy_rotator/: __init__.py
src/proxy_rotator/apps/: __init__.py  retriever.py  tester.py
src/proxy_rotator/config/: __init__.py  db_settings.py
src/proxy_rotator/core/: __init__.py  database.py  models.py
src/proxy_rotator/services/: __init__.py
src/proxy_rotator/services/http/: __init__.py  client.py
src/proxy_rotator/services/proxy/: __init__.py  cache.py  retriever.py  tester.py  validator.py
tests/: conftest.py
tests/integration/: test_proxy_db.py
tests/unit/: test_models.py
