[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-rotator"
version = "0.1.0"
description = "A proxy rotation and management system"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "aioresponses>=0.7.4",
    "aiosqlite>=0.20.0",
]

dev = [
    "pip-tools>=7.3.0",
    "tomli>=2.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/proxy_rotator --cov-report=term-missing"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
] 